Closed
Bug 1829160
Opened 2 years ago
Closed 2 years ago
font-visibility pref also affects the browser chrome
Categories
(Core :: Privacy: Anti-Tracking, defect)
Core
Privacy: Anti-Tracking
Tracking
()
VERIFIED
FIXED
115 Branch
People
(Reporter: mbalfanz, Assigned: jfkthame)
References
Details
Attachments
(3 files)
When setting font-visibility to 1 or 2, it appears like font access is limited for the entire browser, including the browser chrome.
STR
- open a private window and navigate to https://nqo.wikipedia.org/wiki/
- with
font-visibilityset to3, observe the address bar/tab bar - change
font-visibilityto1or2inabout:config - observe the address bar/tab bar again on the page mentioned above
AR
- address bar and tab bar show tofu boxes, similar to the web page content
ER
- address bar and tab bar should show the text in the correct font
Attached are two screenshots, taken on MacOS 13
| Reporter | ||
Comment 1•2 years ago
|
||
Comment 2•2 years ago
|
||
I'm not sure if this is intended to behave this way, or if this is unintentional...
Flags: needinfo?(jfkthame)
| Assignee | ||
Comment 3•2 years ago
|
||
I'm inclined to think we should not apply the font visibility restriction to the browser chrome; it's aimed at web content.
Flags: needinfo?(jfkthame)
| Assignee | ||
Comment 4•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bea282821e77
Don't apply font-visibility restrictions to chrome contexts. r=dholbert
Comment 6•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox115:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
Updated•2 years ago
|
QA Whiteboard: [qa-115b-p2]
Reproducible on a 2023-05-07 Nightly build on macOS 12.
Verified as fixed on Firefox 115.0b9(build ID: 20230622161221) and Nightly 116.0a1(build ID: 20230623092529) on macOS 12, Windows 10, Ubuntu 22.
You need to log in
before you can comment on or make changes to this bug.
Description
•