Bug 1829160 - Don't apply font-visibility restrictions to chrome contexts. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D177357